Fixing xbar layout spacing

--- a/components/ActionPanel/ActionPanel.module.scss
+++ b/components/ActionPanel/ActionPanel.module.scss
@@ -11,5 +11,5 @@
   max-height: calc(100vh - 256px);
   min-height: 300px;
   overflow: hidden auto;
-  padding: $spacing-base 20px;
+  padding: $spacing-base;
 }
