--- a/components/App/App.module.scss
+++ b/components/App/App.module.scss
@@ -100,7 +100,7 @@ $icon-size: 6px;
 
 .sidebar {
   flex: 0 0;
-  min-width: 260px;
+  min-width: 250px;
   position: sticky;
   top: $spacing-xl;
   z-index: 5;
